objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>projects</relationshipLabel>
        <relationshipName>projects_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>hyd</fullName>
                </value>
                <value>
                    <fullName>ctr</fullName>
                </value>
                <value>
                    <fullName>ban</fullName>
                </value>
                <value>
                    <fullName>chn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>new card</fullName>
                </value>
                <value>
                    <fullName>cancel card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>projects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>duration_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Duration__c &lt;50, Duration__c &gt;2000)</errorConditionFormula>
        <errorDisplayField>Duration__c</errorDisplayField>
        <errorMessage>Duration must be 50 to 2000</errorMessage>
    </validationRules>
</CustomObject>